--- a/Web Templates/Forms/form.html
+++ b/Web Templates/Forms/form.html
@@ -11,12 +11,12 @@
 
 <body class="">
   <form id="form-styled">
-    <div class="form-group-text">
+    <div class="form-group text">
       <input required="" type="text" class="input">
       <span class="bar"></span>
       <label>Name</label>
     </div>
-    <div class="form-group-text password">
+    <div class="form-group password">
       <input required="" type="password" class="input">
       <span class="bar"></span>
       <button type="button" onclick="togglePassword(this)">
@@ -25,8 +25,9 @@
       </button>
       <label>Password</label>
     </div>
-    <div class="form-group-date">
+    <div class="form-group date">
       <input type="date" required>
+      <span class="bar"></span>
       <button type="button" onclick="showDatepicker(this)">
         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Zm280 240q-17 0-28.5-11.5T440-440q0-17 11.5-28.5T480-480q17 0 28.5 11.5T520-440q0 17-11.5 28.5T480-400Zm-160 0q-17 0-28.5-11.5T280-440q0-17 11.5-28.5T320-480q17 0 28.5 11.5T360-440q0 17-11.5 28.5T320-400Zm320 0q-17 0-28.5-11.5T600-440q0-17 11.5-28.5T640-480q17 0 28.5 11.5T680-440q0 17-11.5 28.5T640-400ZM480-240q-17 0-28.5-11.5T440-280q0-17 11.5-28.5T480-320q17 0 28.5 11.5T520-280q0 17-11.5 28.5T480-240Zm-160 0q-17 0-28.5-11.5T280-280q0-17 11.5-28.5T320-320q17 0 28.5 11.5T360-280q0 17-11.5 28.5T320-240Zm320 0q-17 0-28.5-11.5T600-280q0-17 11.5-28.5T640-320q17 0 28.5 11.5T680-280q0 17-11.5 28.5T640-240Z"/></svg>
       </button>
