--- a/Web Templates/Forms/form.html
+++ b/Web Templates/Forms/form.html
@@ -71,6 +71,9 @@
     </div>
     <button type="button" class="custom-file-input" onclick="showFileinput(this)">
       <input type="file" name="file1" id="file1"  onchange="fileInputChange(this)">
+      <div class="arrow">
+        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M440-160v-487L216-423l-56-57 320-320 320 320-56 57-224-224v487h-80Z"/></svg>
+      </div>
     </button>
   </form>
 </body>
